added the HTML elements to the hero section

--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Webbutveckling 1</title>
-</head>
-<body>
+  </head>
+  <body>
     <header class="header">
-        <div class="logo-box">
-            <img class="logo" src="/images/CupcakeLogo.png" alt="Logo">
-        </div>
-        <div class="brand-name">
-            <h1>Söt & Elegant</h1>
-        </div>
-    </header> 
-</body>
+      <div class="logo-box">
+        <img class="logo" src="/images/CupcakeLogo.png" alt="Logo" />
+      </div>
+      <div class="text-box">
+        <h1 class="heading-primary">
+            <span class="heading-primary-main">Söt & Elegant</span>
+            <span class="heading-primary-main">Sverigs bästa konditori</span>
+        </h1>
+        <a class="btn btn-white btn-animated" href="#"></a>
+      </div>
+    </header>
+  </body>
 </html>
