--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="text-box">
         <h1 class="heading-primary">
             <span class="heading-primary-main">Söt & Elegant</span>
-            <span class="heading-primary-main">Sverigs bästa konditori</span>
+            <span class="heading-primary-sub">Sverigs bästa konditori</span>
         </h1>
         <a class="btn btn-white btn-animated" href="#"></a>
       </div>
