--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -14,14 +14,14 @@
   <body>
     <header class="header">
       <div class="logo-box">
-        <img class="logo" src="/images/CupcakeLogo.png" alt="Logo" />
+        <a href="#"><img class="logo" src="/images/CupcakeLogo.png" alt="Logo" /></a>
       </div>
       <div class="text-box">
         <h1 class="heading-primary">
-            <span class="heading-primary-main">Söt & Elegant</span>
+            <span class="heading-primary-main">Söt& Elegant</span>
             <span class="heading-primary-sub">Sverigs bästa konditori</span>
         </h1>
-        <a class="btn btn-white btn-animated" href="#"></a>
+        <a class="btn btn-pink btn-animated" href="#">Se vår packet</a>
       </div>
     </header>
   </body>
