added the nav bar to hero section

--- a/index.html
+++ b/index.html
@@ -14,12 +14,21 @@
   <body>
     <header class="header">
       <div class="logo-box">
-        <a href="#"><img class="logo" src="/images/CupcakeLogo.png" alt="Logo" /></a>
+        <a href="#"
+          ><img class="logo" src="/images/CupcakeLogo.png" alt="Logo"
+        /></a>
+        <nav class="nav">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Portfolio</a></li>
+          </ul>
+        </nav>
       </div>
       <div class="text-box">
         <h1 class="heading-primary">
-            <span class="heading-primary-main">Söt & Elegant</span>
-            <span class="heading-primary-sub">Sverigs bästa konditori</span>
+          <span class="heading-primary-main">Söt & Elegant</span>
+          <span class="heading-primary-sub">Sverigs bästa konditori</span>
         </h1>
         <a class="btn btn-pink btn-animated" href="#">Se vår packet</a>
       </div>
