added first section

--- a/index.html
+++ b/index.html
@@ -33,5 +33,19 @@
         <a class="btn btn-pink btn-animated" href="#">Se vår packet</a>
       </div>
     </header>
+    <main>
+      <section>
+        <div class="section-container">
+          <h2>
+            <span class="section-container-main">Vad erbjuder vi?</span>
+            <span class="section-container-sub"
+              >Vi erbjuder allt från minsta tårtan till ett helt packet för
+              flera personer att ta för sig och levererar den enda hem till
+              dig</span
+            >
+          </h2>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
