--- a/index.html
+++ b/index.html
@@ -35,16 +35,25 @@
     </header>
     <main>
       <section>
-        <div class="section-container">
+        <div class="s1 section-container">
           <h2>
             <span class="section-container-main">Vad erbjuder vi?</span>
             <span class="section-container-sub"
-              >Vi erbjuder allt från minsta tårtan till ett helt packet för
-              flera personer att ta för sig och levererar den enda hem till
-              dig</span
+              >Vi erbjuder allt ifrån minsta tårtan till ett helt paket för
+              flera personer och levererar även hem till dig</span
             >
           </h2>
+          <span>
+            <img
+              class="section-container-logo"
+              src="images/delivery2.svg"
+              alt="Leverans"
+            />
+          </span>
         </div>
+      </section>
+      <section>
+        <div class="s2 section-container"></div>
       </section>
     </main>
   </body>
