--- a/index.html
+++ b/index.html
@@ -53,7 +53,40 @@
         </div>
       </section>
       <section>
-        <div class="s2 section-container"></div>
+        <div class="s2 section-container">
+          <ul class="card-list">
+            <li class="card">
+              <div class="card-image">
+                <img src="images/blue-1821389_1920.jpg" alt="Packet 1" />
+              </div>
+              <div class="card-description" href="#" target="_blank">
+                <h2>Bröllopstårta</h2>
+                <p>Lorem ipsum dolor sit amet.</p>
+              </div>
+              <a class="btn btn-blue" href="#">Se vår packet</a>
+            </li>
+            <li class="card">
+              <div class="card-image">
+                <img src="images/cake-1145609_1920.jpg" alt="Packet 2" />
+              </div>
+              <div class="card-description" href="#" target="_blank">
+                <h2>Kalastårta</h2>
+                <p>Lorem ipsum dolor sit amet.</p>
+              </div>
+              <a class="btn btn-blue" href="#">Se vår packet</a>
+            </li>
+            <li class="card">
+              <div class="card-image">
+                <img src="images/cupcake-862646_1920.jpg" alt="Packet 2" />
+              </div>
+              <div class="card-description" href="#" target="_blank">
+                <h2>Tårtmuffins</h2>
+                <p>Lorem ipsum dolor sit amet.</p>
+              </div>
+              <a class="btn btn-blue" href="#">Se vår packet</a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
   </body>
