Portfolio & contact is done

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="sv">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -39,62 +39,28 @@
     </header>
     <main>
       <section>
-        <div class="s1 section-container">
-          <h2>
-            <span class="section-container-main">Vad erbjuder vi?</span>
-            <span class="section-container-sub"
-              >Vi erbjuder allt ifrån minsta tårtan till ett helt paket för
-              flera personer och levererar även hem till dig</span
-            >
-          </h2>
-          <span>
-            <img
-              class="section-container-logo"
-              src="images/delivery2.svg"
-              alt="Leverans"
-            />
-          </span>
-        </div>
-      </section>
-      <section>
-        <div class="s2 section-container">
-          <ul class="card-list">
-            <li class="card">
-              <div class="card-image">
-                <img src="images/blue-1821389_1920.jpg" alt="Packet 1" />
-              </div>
-              <div class="card-description" href="#">
-                <h2>Bröllopstårta</h2>
-              </div>
-              <a class="btn btn-blue" href="#">Se vår packet</a>
-            </li>
-            <li class="card">
-              <div class="card-image">
-                <img src="images/cake-1145609_1920.jpg" alt="Packet 2" />
-              </div>
-              <div class="card-description" href="#">
-                <h2>Kalastårta</h2>
-              </div>
-              <a class="btn btn-blue" href="#">Se vår packet</a>
-            </li>
-            <li class="card">
-              <div class="card-image">
-                <img src="images/cupcake-862646_1920.jpg" alt="Packet 2" />
-              </div>
-              <div class="card-description" href="#">
-                <h2>Tårtmuffins</h2>
-              </div>
-              <a class="btn btn-blue" href="#">Se vår packet</a>
-            </li>
-          </ul>
-        </div>
-      </section>
-      <section>
-        <div class="s3 section-container">
-          <div class="img-container">
-            <h1>Portfolio</h1>
-            <p>Check out our portfolio to see our earlier work</p>
-            <a href="#">Click here</a>
+        <div class="contact-container">
+          <div class="left-col"></div>
+          <div class="right-col">
+            <h1>Kontakta oss</h1>
+            <p>
+              Tveka aldrig på att ta kontakt med oss ifall ni har
+              frågor/funderingar om en beställning som önskas.
+            </p>
+            <form action="post">
+              <label for="name">Full Name</label>
+              <input type="text" placeholder="Your full name" />
+              <label for="email">Your email</label>
+              <input type="emial" placeholder="Your email adress" />
+              <label for="message">Message</label>
+              <textarea
+                name="message"
+                cols="30"
+                rows="10"
+                placeholder="Your message here"
+              ></textarea>
+              <button type="submit">Send</button>
+            </form>
           </div>
         </div>
       </section>
