--- a/portfolio.html
+++ b/portfolio.html
@@ -39,64 +39,62 @@
     </header>
     <main>
       <section>
-        <div class="s1 section-container">
-          <h2>
-            <span class="section-container-main">Vad erbjuder vi?</span>
-            <span class="section-container-sub"
-              >Vi erbjuder allt ifrån minsta tårtan till ett helt paket för
-              flera personer och levererar även hem till dig</span
-            >
-          </h2>
-          <span>
-            <img
-              class="section-container-logo"
-              src="images/delivery2.svg"
-              alt="Leverans"
-            />
-          </span>
-        </div>
-      </section>
-      <section>
-        <div class="s2 section-container">
-          <ul class="card-list">
-            <li class="card">
-              <div class="card-image">
-                <img src="images/blue-1821389_1920.jpg" alt="Packet 1" />
+        <div class="container">
+          <div class="gallery-container w-2 h-4">
+            <div class="gallery-item">
+              <div class="image">
+                <img src="/images/wedding1.jpg" alt="Wedding Cake" />
               </div>
-              <div class="card-description" href="#">
-                <h2>Bröllopstårta</h2>
+              <div class="image-title">Wedding Cake</div>
+            </div>
+          </div>
+          <!-- P1 End -->
+          <div class="gallery-container w-4 h-4">
+            <div class="gallery-item">
+              <div class="image">
+                <img src="images/Cupcakes1.jpg" alt="Cupcakes" />
               </div>
-              <a class="btn btn-blue" href="#">Se vår packet</a>
-            </li>
-            <li class="card">
-              <div class="card-image">
-                <img src="images/cake-1145609_1920.jpg" alt="Packet 2" />
+              <div class="image-title">Cupcakes</div>
+            </div>
+          </div>
+          <!-- P2 End -->
+          <div class="gallery-container w-4 h-2">
+            <div class="gallery-item">
+              <div class="image">
+                <img src="images/birthday.jpg" alt="Childrens cake" />
               </div>
-              <div class="card-description" href="#">
-                <h2>Kalastårta</h2>
+              <div class="image-title">Childrens cake</div>
+            </div>
+          </div>
+          <!-- P3 End -->
+          <div class="gallery-container w-2 h-2">
+            <div class="gallery-item">
+              <div class="image">
+                <img src="images/cake-pops.jpg" alt="Cake Pops" />
               </div>
-              <a class="btn btn-blue" href="#">Se vår packet</a>
-            </li>
-            <li class="card">
-              <div class="card-image">
-                <img src="images/cupcake-862646_1920.jpg" alt="Packet 2" />
+              <div class="image-title">Cake Pops</div>
+            </div>
+          </div>
+          <!-- P4 End -->
+          <div class="gallery-container w-3 h-2">
+            <div class="gallery-item">
+              <div class="image">
+                <img src="images/lemon cake.jpg" alt="Lemon Cake" />
               </div>
-              <div class="card-description" href="#">
-                <h2>Tårtmuffins</h2>
+              <div class="image-title">Lemon Cake</div>
+            </div>
+          </div>
+          <!-- P5 End -->
+          <div class="gallery-container w-3 h-2">
+            <div class="gallery-item">
+              <div class="image">
+                <img src="images/strawberry cake.jpg" alt="Strawberry Cake" />
               </div>
-              <a class="btn btn-blue" href="#">Se vår packet</a>
-            </li>
-          </ul>
-        </div>
-      </section>
-      <section>
-        <div class="s3 section-container">
-          <div class="img-container">
-            <h1>Portfolio</h1>
-            <p>Check out our portfolio to see our earlier work</p>
-            <a href="#">Click here</a>
+              <div class="image-title">Strawberry Cake</div>
+            </div>
           </div>
         </div>
+        <!-- P6 End -->
       </section>
     </main>
     <footer class="footer">
