--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,8 @@
             <li><a href="/">Home</a></li>
             <li><a href="/portfolio.html">Portfolio</a></li>
             <li><a href="/contact.html">Contact</a></li>
+            <li><a href="/faq.html">FAQ</a></li>
+            <li><a href="/packet.html">Packet</a></li>
           </ul>
         </nav>
       </div>
@@ -48,17 +50,18 @@
               frågor/funderingar om en beställning som önskas.
             </p>
             <form action="post">
-              <label for="name">Full Name</label>
-              <input type="text" placeholder="Your full name" />
-              <label for="email">Your email</label>
-              <input type="emial" placeholder="Your email adress" />
-              <label for="message">Message</label>
+              <label for="name">Fullständigt namn</label>
+              <input type="text" id="name" placeholder="För/efter namn" />
+              <label for="email">Mail Adress</label>
+              <input type="email" id="email" placeholder="Email adress" />
+              <label for="message">Meddelande</label>
               <textarea
-                name="message"
+                name="Meddelande"
                 rows="10"
-                placeholder="Your message here"
+                id="message"
+                placeholder="Skriv ett meddelande här"
               ></textarea>
-              <button type="submit">Send</button>
+              <button type="submit">Skicka</button>
             </form>
           </div>
         </div>
@@ -94,13 +97,13 @@
           <div class="footer-col">
             <h4>Följ oss på sociala medier</h4>
             <div class="social-links">
-              <a href="www.facebook.com/" target="_blank"
+              <a href="https://www.facebook.com/" target="_blank"
                 ><i class="fa-brands fa-facebook fa-4x"></i
               ></a>
-              <a href="">
+              <a href="https://www.instagram.com/">
                 <i class="fa-brands fa-instagram fa-4x"></i>
               </a>
-              <a href="">
+              <a href="https://www.linkedin.com/">
                 <i class="fa-brands fa-linkedin-in fa-4x"></i>
               </a>
             </div>
