--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
         <a href="#"
           ><img class="logo" src="/images/CupcakeLogo.png" alt="Logo"
         /></a>
+        <!-- Burger here -->
         <nav class="nav">
           <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/portfolio.html">Portfolio</a></li>
             <li><a href="/contact.html">Contact</a></li>
+            <li><a href="/faq.html">FAQ</a></li>
+            <li><a href="/packet.html">Packet</a></li>
           </ul>
         </nav>
       </div>
@@ -61,7 +64,7 @@
           <ul class="card-list">
             <li class="card">
               <div class="card-image">
-                <img src="images/blue-1821389_1920.jpg" alt="Packet 1" />
+                <img src="images/wedding2.jpg" alt="Packet 1" />
               </div>
               <div class="card-description" href="#">
                 <h2>Bröllopstårta</h2>
@@ -70,7 +73,7 @@
             </li>
             <li class="card">
               <div class="card-image">
-                <img src="images/cake-1145609_1920.jpg" alt="Packet 2" />
+                <img src="images/Choclate Cake.jpg" alt="Packet 2" />
               </div>
               <div class="card-description" href="#">
                 <h2>Kalastårta</h2>
@@ -79,10 +82,10 @@
             </li>
             <li class="card">
               <div class="card-image">
-                <img src="images/cupcake-862646_1920.jpg" alt="Packet 2" />
+                <img src="images/Cupcakes4.jpg" alt="Packet 2" />
               </div>
               <div class="card-description" href="#">
-                <h2>Tårtmuffins</h2>
+                <h2>Muffins</h2>
               </div>
               <a class="btn btn-blue" href="#">Se vår packet</a>
             </li>
@@ -93,8 +96,11 @@
         <div class="s3 section-container">
           <div class="img-container">
             <h1>Portfolio</h1>
-            <p>Check out our portfolio to see our earlier work</p>
-            <a href="#">Click here</a>
+            <p>
+              Kolla in vårt portfolio för tidigare arbete och se vad som ni
+              tycker passar er bäst
+            </p>
+            <a href="/portfolio.html">Click here</a>
           </div>
         </div>
       </section>
@@ -129,13 +135,13 @@
           <div class="footer-col">
             <h4>Följ oss på sociala medier</h4>
             <div class="social-links">
-              <a href="www.facebook.com/" target="_blank"
+              <a href="https://www.facebook.com/" target="_blank"
                 ><i class="fa-brands fa-facebook fa-4x"></i
               ></a>
-              <a href="">
+              <a href="https://www.instagram.com/">
                 <i class="fa-brands fa-instagram fa-4x"></i>
               </a>
-              <a href="">
+              <a href="https://www.linkedin.com/">
                 <i class="fa-brands fa-linkedin-in fa-4x"></i>
               </a>
             </div>
