--- a/packet.html
+++ b/packet.html
@@ -21,13 +21,13 @@
         <a href="#"
           ><img class="logo" src="/images/CupcakeLogo.png" alt="Logo"
         /></a>
+        <!-- Burger here -->
         <nav class="nav">
           <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/portfolio.html">Portfolio</a></li>
             <li><a href="/contact.html">Contact</a></li>
             <li><a href="/faq.html">FAQ</a></li>
-            <li><a href="/packet.html">Packet</a></li>
           </ul>
         </nav>
       </div>
@@ -41,62 +41,37 @@
     </header>
     <main>
       <section>
-        <div class="container">
-          <div class="gallery-container w-2 h-4">
-            <div class="gallery-item">
-              <div class="image">
-                <img src="/images/wedding1.jpg" alt="Wedding Cake" />
+        <div class="s2 section-container">
+          <ul class="card-list">
+            <li class="card">
+              <div class="card-image">
+                <img src="images/wedding2.jpg" alt="Packet 1" />
               </div>
-              <div class="image-title">Wedding Cake</div>
-            </div>
-          </div>
-          <!-- P1 End -->
-          <div class="gallery-container w-4 h-4">
-            <div class="gallery-item">
-              <div class="image">
-                <img src="images/Cupcakes1.jpg" alt="Cupcakes" />
+              <div class="card-description" href="#">
+                <h2>Bröllopstårta</h2>
               </div>
-              <div class="image-title">Cupcakes</div>
-            </div>
-          </div>
-          <!-- P2 End -->
-          <div class="gallery-container w-4 h-2">
-            <div class="gallery-item">
-              <div class="image">
-                <img src="images/birthday.jpg" alt="Childrens cake" />
+              <a class="btn btn-blue" href="#">Se vår packet</a>
+            </li>
+            <li class="card">
+              <div class="card-image">
+                <img src="images/Choclate Cake.jpg" alt="Packet 2" />
               </div>
-              <div class="image-title">Childrens cake</div>
-            </div>
-          </div>
-          <!-- P3 End -->
-          <div class="gallery-container w-2 h-2">
-            <div class="gallery-item">
-              <div class="image">
-                <img src="images/cake-pops.jpg" alt="Cake Pops" />
+              <div class="card-description" href="#">
+                <h2>Kalastårta</h2>
               </div>
-              <div class="image-title">Cake Pops</div>
-            </div>
-          </div>
-          <!-- P4 End -->
-          <div class="gallery-container w-3 h-2">
-            <div class="gallery-item">
-              <div class="image">
-                <img src="images/lemon cake.jpg" alt="Lemon Cake" />
+              <a class="btn btn-blue" href="#">Se vår packet</a>
+            </li>
+            <li class="card">
+              <div class="card-image">
+                <img src="images/Cupcakes4.jpg" alt="Packet 2" />
               </div>
-              <div class="image-title">Lemon Cake</div>
-            </div>
-          </div>
-          <!-- P5 End -->
-          <div class="gallery-container w-3 h-2">
-            <div class="gallery-item">
-              <div class="image">
-                <img src="images/strawberry cake.jpg" alt="Strawberry Cake" />
+              <div class="card-description" href="#">
+                <h2>Muffins</h2>
               </div>
-              <div class="image-title">Strawberry Cake</div>
-            </div>
-          </div>
+              <a class="btn btn-blue" href="#">Se vår packet</a>
+            </li>
+          </ul>
         </div>
-        <!-- P6 End -->
       </section>
     </main>
     <footer class="footer">
