--- a/faq.html
+++ b/faq.html
@@ -21,6 +21,7 @@
         <a href="#"
           ><img class="logo" src="/images/CupcakeLogo.png" alt="Logo"
         /></a>
+        <!-- Burger here -->
         <nav class="nav">
           <ul>
             <li><a href="/">Home</a></li>
@@ -41,62 +42,38 @@
     </header>
     <main>
       <section>
-        <div class="container">
-          <div class="gallery-container w-2 h-4">
-            <div class="gallery-item">
-              <div class="image">
-                <img src="/images/wedding1.jpg" alt="Wedding Cake" />
-              </div>
-              <div class="image-title">Wedding Cake</div>
-            </div>
-          </div>
-          <!-- P1 End -->
-          <div class="gallery-container w-4 h-4">
-            <div class="gallery-item">
-              <div class="image">
-                <img src="images/Cupcakes1.jpg" alt="Cupcakes" />
-              </div>
-              <div class="image-title">Cupcakes</div>
-            </div>
-          </div>
-          <!-- P2 End -->
-          <div class="gallery-container w-4 h-2">
-            <div class="gallery-item">
-              <div class="image">
-                <img src="images/birthday.jpg" alt="Childrens cake" />
-              </div>
-              <div class="image-title">Childrens cake</div>
-            </div>
-          </div>
-          <!-- P3 End -->
-          <div class="gallery-container w-2 h-2">
-            <div class="gallery-item">
-              <div class="image">
-                <img src="images/cake-pops.jpg" alt="Cake Pops" />
-              </div>
-              <div class="image-title">Cake Pops</div>
-            </div>
-          </div>
-          <!-- P4 End -->
-          <div class="gallery-container w-3 h-2">
-            <div class="gallery-item">
-              <div class="image">
-                <img src="images/lemon cake.jpg" alt="Lemon Cake" />
-              </div>
-              <div class="image-title">Lemon Cake</div>
-            </div>
-          </div>
-          <!-- P5 End -->
-          <div class="gallery-container w-3 h-2">
-            <div class="gallery-item">
-              <div class="image">
-                <img src="images/strawberry cake.jpg" alt="Strawberry Cake" />
-              </div>
-              <div class="image-title">Strawberry Cake</div>
-            </div>
-          </div>
+        <div class="s1 section-container">
+          <h2>
+            <span class="section-container-main">Hur levererar vi?</span>
+            <span class="section-container-sub"
+              >Så fort ni som kund lägger en beställning så tar vi emot den och
+              börjar att planera. Vi bokar även leverans bil så vi kan köra ut
+              till er och hålla produkterna fräscha</span
+            >
+          </h2>
         </div>
-        <!-- P6 End -->
+      </section>
+      <section>
+        <div class="s4 section-container">
+          <h2 class="GR-2">
+            <span class="section-container-main">Hur sker betalningen?</span>
+            <span class="section-container-sub"
+              >Efter produkterna har kommit fram till er så skickas det en
+              faktura till er som kund med 30 dagars betalningstid</span
+            >
+          </h2>
+        </div>
+      </section>
+      <section>
+        <div class="s5 section-container">
+          <h2 class="GR-1">
+            <span class="section-container-main">Hur lång tid tar det?</span>
+            <span class="section-container-sub"
+              >Om ni beställer i god tid kan det ta upp till 2 dagar innan
+              allting är färdigt och på plats hemma hos er</span
+            >
+          </h2>
+        </div>
       </section>
     </main>
     <footer class="footer">
