packet.html done

--- a/index.html
+++ b/index.html
@@ -64,30 +64,33 @@
           <ul class="card-list">
             <li class="card">
               <div class="card-image">
-                <img src="images/wedding2.jpg" alt="Packet 1" />
+                <img src="images/wedding1.jpg" alt="Packet 1" />
               </div>
-              <div class="card-description" href="#">
+              <div class="card-description">
                 <h2>Bröllopstårta</h2>
+                <p>Valfri bröllopstårta</p>
               </div>
-              <a class="btn btn-blue" href="#">Se vår packet</a>
+              <a class="btn btn-blue" href="/packet.html">Se vår packet</a>
             </li>
             <li class="card">
               <div class="card-image">
-                <img src="images/Choclate Cake.jpg" alt="Packet 2" />
+                <img src="images/chocolate cake.jpg" alt="Packet 2" />
               </div>
-              <div class="card-description" href="#">
+              <div class="card-description">
                 <h2>Kalastårta</h2>
+                <p>Valfri kalastårta</p>
               </div>
-              <a class="btn btn-blue" href="#">Se vår packet</a>
+              <a class="btn btn-blue" href="/packet.html">Se vår packet</a>
             </li>
             <li class="card">
               <div class="card-image">
-                <img src="images/Cupcakes4.jpg" alt="Packet 2" />
+                <img src="images/Cupcakes1.jpg" alt="Packet 3" />
               </div>
-              <div class="card-description" href="#">
+              <div class="card-description">
                 <h2>Muffins</h2>
+                <p>Valfria muffins</p>
               </div>
-              <a class="btn btn-blue" href="#">Se vår packet</a>
+              <a class="btn btn-blue" href="/packet.html">Se vår packet</a>
             </li>
           </ul>
         </div>
@@ -95,7 +98,7 @@
       <section>
         <div class="s3 section-container">
           <div class="img-container">
-            <h1>Portfolio</h1>
+            <h3>Portfolio</h3>
             <p>
               Kolla in vårt portfolio för tidigare arbete och se vad som ni
               tycker passar er bäst
@@ -138,10 +141,10 @@
               <a href="https://www.facebook.com/" target="_blank"
                 ><i class="fa-brands fa-facebook fa-4x"></i
               ></a>
-              <a href="https://www.instagram.com/">
+              <a href="https://www.instagram.com/" target="_blank">
                 <i class="fa-brands fa-instagram fa-4x"></i>
               </a>
-              <a href="https://www.linkedin.com/">
+              <a href="https://www.linkedin.com/" target="_blank">
                 <i class="fa-brands fa-linkedin-in fa-4x"></i>
               </a>
             </div>
