--- a/packet.html
+++ b/packet.html
@@ -47,30 +47,103 @@
               <div class="card-image">
                 <img src="images/wedding2.jpg" alt="Packet 1" />
               </div>
-              <div class="card-description" href="#">
-                <h2>Bröllopstårta</h2>
+              <div class="card-description">
+                <h2>Wedding Cake</h2>
+                <p>1x Wedding cake</p>
+                <p>20x Muffins</p>
+                <p>50x Choclate cake pops</p>
               </div>
-              <a class="btn btn-blue" href="#">Se vår packet</a>
             </li>
             <li class="card">
               <div class="card-image">
                 <img src="images/Choclate Cake.jpg" alt="Packet 2" />
               </div>
-              <div class="card-description" href="#">
-                <h2>Kalastårta</h2>
+              <div class="card-description">
+                <h2>Choclate Cake</h2>
+                <p>1x Choclate cake</p>
+                <p>10x Muffins</p>
+                <p>20x Choclate cake pops</p>
               </div>
-              <a class="btn btn-blue" href="#">Se vår packet</a>
             </li>
             <li class="card">
               <div class="card-image">
-                <img src="images/Cupcakes4.jpg" alt="Packet 2" />
+                <img src="images/birthday2.jpg" alt="Packet 3" />
               </div>
-              <div class="card-description" href="#">
-                <h2>Muffins</h2>
+              <div class="card-description">
+                <h2>Birthday Cake</h2>
+                <p>1x Birthday Cake</p>
+                <p>20x Muffins</p>
+                <p>20x Choclate cake pops</p>
               </div>
-              <a class="btn btn-blue" href="#">Se vår packet</a>
+            </li>
+            <li class="card">
+              <div class="card-image">
+                <img src="images/birthday3.jpg" alt="Packet 4" />
+              </div>
+              <div class="card-description">
+                <h2>Vanilla Cake</h2>
+                <p>1x Vanilla cake</p>
+                <p>10x Muffins</p>
+                <p>10x Choclate cake pops</p>
+              </div>
+            </li>
+            <li class="card">
+              <div class="card-image">
+                <img src="images/Cupcakes2.jpg" alt="Packet 5" />
+              </div>
+              <div class="card-description">
+                <h2>Choclate muffins</h2>
+                <p>Muffins</p>
+                <p>Beautiful topping</p>
+                <p>Stuffed with choclate</p>
+              </div>
+            </li>
+            <li class="card">
+              <div class="card-image">
+                <img src="images/Cupcakes3.jpg" alt="Packet 6" />
+              </div>
+              <div class="card-description">
+                <h2>Vanilla muffins</h2>
+                <p>Muffins</p>
+                <p>Beautiful topping</p>
+                <p>Stuffed with vanilla cream</p>
+              </div>
+            </li>
+            <li class="card">
+              <div class="card-image">
+                <img src="images/Cupcakes4.jpg" alt="Packet 7" />
+              </div>
+              <div class="card-description">
+                <h2>Choclate muffins</h2>
+                <p>Muffins</p>
+                <p>Beautiful topping</p>
+                <p>Stuffed with vanilla cream</p>
+              </div>
+            </li>
+            <li class="card">
+              <div class="card-image">
+                <img src="images/Cupcakes5.jpg" alt="Packet 8" />
+              </div>
+              <div class="card-description">
+                <h2>Choclate muffins</h2>
+                <p>Muffins</p>
+                <p>Beautiful topping</p>
+                <p>Stuffed with vanilla cream</p>
+              </div>
             </li>
           </ul>
+        </div>
+      </section>
+      <section>
+        <div class="s4 section-container">
+          <h2>
+            <span class="section-container-main">Special Packet</span>
+            <span class="section-container-sub"
+              >Hittar du inte det du letar efter så kan du alltid ta kontakt med
+              oss och sedan välja ut något efter din egna smak. Detta gäller
+              även vid allergier</span
+            >
+          </h2>
         </div>
       </section>
     </main>
@@ -107,10 +180,10 @@
               <a href="https://www.facebook.com/" target="_blank"
                 ><i class="fa-brands fa-facebook fa-4x"></i
               ></a>
-              <a href="https://www.instagram.com/">
+              <a href="https://www.instagram.com/" target="_blank">
                 <i class="fa-brands fa-instagram fa-4x"></i>
               </a>
-              <a href="https://www.linkedin.com/">
+              <a href="https://www.linkedin.com/" target="_blank">
                 <i class="fa-brands fa-linkedin-in fa-4x"></i>
               </a>
             </div>
