--- a/portfolio.html
+++ b/portfolio.html
@@ -132,10 +132,10 @@
               <a href="https://www.facebook.com/" target="_blank"
                 ><i class="fa-brands fa-facebook fa-4x"></i
               ></a>
-              <a href="https://www.instagram.com/">
+              <a href="https://www.instagram.com/" target="_blank">
                 <i class="fa-brands fa-instagram fa-4x"></i>
               </a>
-              <a href="https://www.linkedin.com/">
+              <a href="https://www.linkedin.com/" target="_blank">
                 <i class="fa-brands fa-linkedin-in fa-4x"></i>
               </a>
             </div>
