--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <header class="header">
       <div class="logo-box">
-        <a href="#"
+        <a href="/"
           ><img class="logo" src="/images/CupcakeLogo.png" alt="Logo"
         /></a>
         <!-- Burger here -->
@@ -28,7 +28,7 @@
             <li><a href="/portfolio.html">Portfolio</a></li>
             <li><a href="/contact.html">Contact</a></li>
             <li><a href="/faq.html">FAQ</a></li>
-            <li><a href="/packet.html">Packet</a></li>
+            <li><a href="/packet.html">Paket</a></li>
           </ul>
         </nav>
       </div>
@@ -37,7 +37,9 @@
           <span class="heading-primary-main">Söt & Elegant</span>
           <span class="heading-primary-sub">Sverigs bästa konditori</span>
         </h1>
-        <a class="btn btn-pink btn-animated" href="#">Se vår packet</a>
+        <a class="btn btn-pink btn-animated" href="/packet.html"
+          >Se vår paket</a
+        >
       </div>
     </header>
     <main>
@@ -74,7 +76,7 @@
             </li>
             <li class="card">
               <div class="card-image">
-                <img src="images/chocolate cake.jpg" alt="Packet 2" />
+                <img src="images/chocolate-cake.jpg" alt="Packet 2" />
               </div>
               <div class="card-description">
                 <h2>Kalastårta</h2>
