--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
   <body>
     <header class="header">
       <div class="logo-box">
-        <a href="#"
+        <a href="/"
           ><img class="logo" src="/images/CupcakeLogo.png" alt="Logo"
         /></a>
         <nav class="nav">
@@ -27,7 +27,7 @@
             <li><a href="/portfolio.html">Portfolio</a></li>
             <li><a href="/contact.html">Contact</a></li>
             <li><a href="/faq.html">FAQ</a></li>
-            <li><a href="/packet.html">Packet</a></li>
+            <li><a href="/packet.html">Paket</a></li>
           </ul>
         </nav>
       </div>
@@ -36,18 +36,27 @@
           <span class="heading-primary-main">Söt & Elegant</span>
           <span class="heading-primary-sub">Sverigs bästa konditori</span>
         </h1>
-        <a class="btn btn-pink btn-animated" href="#">Se vår packet</a>
+        <a class="btn btn-pink btn-animated" href="/packet.html"
+          >Se vår paket</a
+        >
       </div>
     </header>
     <main>
       <section>
+        <div class="s2 section-container">
+          <h1>
+            <span class="section-container-main"
+              >Hoppas ni hittar något ni gillar</span
+            >
+          </h1>
+        </div>
         <div class="container">
           <div class="gallery-container w-2 h-4">
             <div class="gallery-item">
               <div class="image">
                 <img src="/images/wedding1.jpg" alt="Wedding Cake" />
               </div>
-              <div class="image-title">Wedding Cake</div>
+              <div class="image-title">Bröllopstårta</div>
             </div>
           </div>
           <!-- P1 End -->
@@ -56,7 +65,7 @@
               <div class="image">
                 <img src="images/Cupcakes1.jpg" alt="Cupcakes" />
               </div>
-              <div class="image-title">Cupcakes</div>
+              <div class="image-title">Muffins</div>
             </div>
           </div>
           <!-- P2 End -->
@@ -65,7 +74,7 @@
               <div class="image">
                 <img src="images/birthday.jpg" alt="Childrens cake" />
               </div>
-              <div class="image-title">Childrens cake</div>
+              <div class="image-title">Föddelsedagstårta</div>
             </div>
           </div>
           <!-- P3 End -->
@@ -74,25 +83,25 @@
               <div class="image">
                 <img src="images/cake-pops.jpg" alt="Cake Pops" />
               </div>
-              <div class="image-title">Cake Pops</div>
+              <div class="image-title">Chokladbollar</div>
             </div>
           </div>
           <!-- P4 End -->
           <div class="gallery-container w-3 h-2">
             <div class="gallery-item">
               <div class="image">
-                <img src="images/lemon cake.jpg" alt="Lemon Cake" />
+                <img src="images/lemon-cake.jpg" alt="Lemon Cake" />
               </div>
-              <div class="image-title">Lemon Cake</div>
+              <div class="image-title">Citrontårta</div>
             </div>
           </div>
           <!-- P5 End -->
           <div class="gallery-container w-3 h-2">
             <div class="gallery-item">
               <div class="image">
-                <img src="images/strawberry cake.jpg" alt="Strawberry Cake" />
+                <img src="images/strawberry-cake.jpg" alt="Strawberry Cake" />
               </div>
-              <div class="image-title">Strawberry Cake</div>
+              <div class="image-title">Jordgubstårta</div>
             </div>
           </div>
         </div>
