--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
   <body>
     <header class="header">
       <div class="logo-box">
-        <a href="#"
+        <a href="/"
           ><img class="logo" src="/images/CupcakeLogo.png" alt="Logo"
         /></a>
         <nav class="nav">
@@ -27,7 +27,7 @@
             <li><a href="/portfolio.html">Portfolio</a></li>
             <li><a href="/contact.html">Contact</a></li>
             <li><a href="/faq.html">FAQ</a></li>
-            <li><a href="/packet.html">Packet</a></li>
+            <li><a href="/packet.html">Paket</a></li>
           </ul>
         </nav>
       </div>
@@ -36,7 +36,9 @@
           <span class="heading-primary-main">Söt & Elegant</span>
           <span class="heading-primary-sub">Sverigs bästa konditori</span>
         </h1>
-        <a class="btn btn-pink btn-animated" href="#">Se vår packet</a>
+        <a class="btn btn-pink btn-animated" href="/packet.html"
+          >Se vår paket</a
+        >
       </div>
     </header>
     <main>
